# sockudo-ws

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  benchmark_results.txt
.github/workflows/: ci.yml  napi-ci.yml  publish.yml
autobahn/: Makefile  fuzzingclient.json  server.rs
autobahn/reports/: index.html
benches/: comparison_bench.rs  websocket_bench.rs
examples/: axum_deflate.rs  axum_deflate_custom.rs  axum_echo.rs  axum_split.rs  http2_echo.rs  http3_echo.rs  simple_echo.rs  split_echo.rs  test_axum_split_client.rs  test_large_message.rs  test_split_concurrent.rs  wtx_bench_echo.rs
napi-bindings/: Cargo.toml  index.mjs  jsr.json  package-lock.json  package.json
src/: alloc.rs  axum_integration.rs  client.rs  compio.rs  cork.rs  deflate.rs  error.rs  extended_connect.rs  frame.rs  handshake.rs  lib.rs  mask.rs  multiplex.rs  protocol.rs  pubsub.rs  queue.rs  server.rs  simd.rs  stream.rs  transport.rs  utf8.rs
src/http2/: client.rs  handshake.rs  mod.rs  server.rs  stream.rs
src/http3/: client.rs  handshake.rs  mod.rs  server.rs  stream.rs
src/io_uring/: buffer.rs  mod.rs  stream.rs
src/stream/: mod.rs  transport_stream.rs  websocket.rs
tests/: e2e_runtime_transports.rs
