[package]
name = "sockudo-ws"
version = "0.1.0"
edition = "2024"
authors = ["HFT WebSocket Library"]
description = "Ultra-low latency WebSocket library for HFT applications"
license = "MIT"

[lib]
name = "sockudo_ws"
path = "src/lib.rs"

[[bin]]
name = "sockudo-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "autobahn-server"
path = "autobahn/server.rs"

[features]
default = ["simd", "tokio-runtime", "permessage-deflate"]
simd = []
avx2 = ["simd"]
avx512 = ["simd"]
neon = ["simd"]
tokio-runtime = ["tokio", "tokio-util"]
axum-integration = ["axum", "tokio-runtime"]
permessage-deflate = ["flate2"]

[dependencies]
# Tokio async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

# Axum integration
axum = { version = "0.8", optional = true }

# HTTP parsing
httparse = "1.9"

# Base64 for WebSocket handshake
base64 = "0.22"

# SHA-1 for WebSocket handshake
sha1 = "0.10"

# For benchmarking
criterion = { version = "0.5", optional = true }

# Bytes for zero-copy buffers
bytes = "1.9"

# Pin utilities
pin-project-lite = "0.2"

# Futures traits
futures-core = "0.3"
futures-sink = "0.3"

# Compression (permessage-deflate, RFC 7692)
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"], optional = true }

# Socket options (SO_REUSEPORT, TCP_NODELAY)
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
axum = "0.8"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }

[[bench]]
name = "websocket_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = true
