[package]
name = "sockudo-ws"
version = "1.0.0"
edition = "2021"
authors = ["HFT WebSocket Library"]
description = "Ultra-low latency WebSocket library for HFT applications"
license = "MIT"

[lib]
name = "sockudo_ws"
path = "src/lib.rs"

[[bin]]
name = "sockudo-bench"
path = "src/bin/bench.rs"

[[bin]]
name = "autobahn-server"
path = "autobahn/server.rs"

[features]
default = ["simd", "tokio-runtime", "permessage-deflate"]
simd = []
avx2 = ["simd"]
avx512 = ["simd"]
neon = ["simd"]
tokio-runtime = ["tokio", "tokio-util"]
axum-integration = ["axum", "tokio-runtime"]
permessage-deflate = ["flate2"]

# HTTP/2 WebSocket support (RFC 8441)
http2 = ["h2", "http", "tokio-runtime"]

# HTTP/3 WebSocket support (RFC 9220)
http3 = ["quinn", "h3", "h3-quinn", "http", "rustls", "tokio-runtime"]

# io_uring support (Linux only)
io-uring = ["tokio-uring"]

# All transport features
all-transports = ["http2", "http3", "io-uring"]

# Full feature set
full = ["simd", "tokio-runtime", "axum-integration", "permessage-deflate", "all-transports"]

[dependencies]
# Tokio async runtime
tokio = { version = "1.42", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

# Axum integration
axum = { version = "0.8", optional = true }

# HTTP parsing
httparse = "1.9"

# Base64 for WebSocket handshake
base64 = "0.22"

# SHA-1 for WebSocket handshake
sha1 = "0.10"

# For benchmarking
criterion = { version = "0.5", optional = true }

# Bytes for zero-copy buffers
bytes = "1.9"

# Pin utilities
pin-project-lite = "0.2"

# Futures traits
futures-core = "0.3"
futures-sink = "0.3"

# Compression (permessage-deflate, RFC 7692)
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"], optional = true }

# Socket options (SO_REUSEPORT, TCP_NODELAY)
socket2 = { version = "0.5", features = ["all"] }

# HTTP/2 support (RFC 8441)
h2 = { version = "0.4", optional = true }
http = { version = "1.0", optional = true }

# HTTP/3 support (RFC 9220)
quinn = { version = "0.11", optional = true }
h3 = { version = "0.0.8", optional = true }
h3-quinn = { version = "0.0.10", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }

# io_uring support (Linux only)
tokio-uring = { version = "0.5", optional = true }

[dev-dependencies]
criterion = "0.5"
rand = "0.9"
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
axum = "0.8"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = "0.13"
rustls-pemfile = "2.0"

[[example]]
name = "http2_echo"
required-features = ["http2"]

[[example]]
name = "http3_echo"
required-features = ["http3"]

[[bench]]
name = "websocket_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
debug = true
