[package]
name = "sockudo-ws-napi"
version = "1.6.3"
edition = "2024"
authors = ["Diaconu Radu-Mihai"]
description = "Ultra-fast Node.js WebSocket bindings for sockudo-ws - the fastest WebSocket library"
license = "MIT"
repository = "https://github.com/sockudo/sockudo-ws"
keywords = ["websocket", "napi", "performance", "hft", "nodejs"]
categories = ["network-programming", "web-programming", "api-bindings"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["simd", "compression"]
simd = ["sockudo-ws/simd"]
compression = ["sockudo-ws/permessage-deflate"]

[dependencies]
# Core sockudo-ws library
sockudo-ws = { path = "..", features = ["tokio-runtime", "simd", "permessage-deflate", "fastrand"] }

# NAPI-RS v3 for Node.js bindings
napi = { version = "3", features = [
    "async",
    "tokio_rt",
    "serde-json",
    "napi10",
    "tokio",
    "tokio_macros",
    "tokio_io_util",
    "deferred_trace",
    "error_anyhow"
] }
napi-derive = "3"

# Async runtime - configure worker threads
tokio = { version = "^1.48", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }

# Zero-copy buffers
bytes = "^1.9"

# Lock-free data structures for maximum performance
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"

# Serde for config serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Futures for async streams
futures-util = "0.3"

# Parking lot for faster mutexes (when needed)
parking_lot = "0.12"

# One-time initialization for runtime
once_cell = "1"

# Error handling
anyhow = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
